fixed bug where objects caused nav regions to shift downwards, started work on "back" nav region (for object views)

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 	height: 100%;
 	width: 20%;
 	color: transparent;
+	border: 2px dotted black;
+	display: block;
 }
 
 #left {
@@ -22,7 +24,6 @@
 
 #right {
 	float: right;
-	text-align: right;
 	cursor: url(cursor/right.png) 27 15, e-resize;
 }
 
@@ -32,6 +33,18 @@
 	width: 40%;
 	text-align: center;
 	cursor: url(cursor/forward.png) 16 5, n-resize;
+}
+
+#back {
+	display: none;
+	width: 100%;
+	height: 40%;
+	top: 60%;
+	cursor: s-resize;
+}
+
+.objectviewnav {
+	cursor: s-resize	!important;
 }
 
 .obj {
